# TraceLog

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  configure.sh  makefile
example/: main.cpp  udpclient.cpp
include/log/: ConsoleBackEnd.h  FileBackEnd.h  ILogBackEnd.h  ILogger.h  LogDefines.h  LogEntry.h  LogPersistThread.h  Logger.h  TraceBuffer.h  TraceSharedContainer.h  UdpBackEnd.h  UdpClientMediator.h  log.h
include/trace/: ConsoleBackEnd.h  FileBackEnd.h  ILogBackEnd.h  ILogger.h  LogDefines.h  LogEntry.h  LogPersistThread.h  Logger.h  TraceBuffer.h  TraceSharedContainer.h  UdpBackEnd.h  UdpClientMediator.h  log.h
include/trace/backend/: ILogBackEnd.h
include/trace/backend/udp/: UdpBackEndControl.h
include/trace/config/: IConfig.h  IConfigProvider.h  TraceConfig.h
include/trace/entry/: LogEntry.h  Payload.h  PayloadHelper.h  TraceLevelInfo.h
include/trace/model/: LogBuffer.h  LogPersistThread.h  LogSharedContainer.h  TraceBuffer.h  TraceSharedContainer.h
src/log/: ConsoleBackEnd.cpp  FileBackEnd.cpp  LogEntry.cpp  LogPersistThread.cpp  Logger.cpp  TraceBuffer.cpp  TraceSharedContainer.cpp  UdpBackEnd.cpp  UdpClientMediator.cpp  log.cpp
src/trace/: ConsoleBackEnd.cpp  FileBackEnd.cpp  LogEntry.cpp  LogPersistThread.cpp  Logger.cpp  TraceBuffer.cpp  TraceSharedContainer.cpp  UdpBackEnd.cpp  UdpClientMediator.cpp  log.cpp
src/trace/config/: TraceConfig.cpp
src/trace/entry/: LogEntry.cpp  Payload.cpp  PayloadHelper.cpp  TraceLevelInfo.cpp
src/trace/model/: LogBuffer.cpp  LogPersistThread.cpp  LogSharedContainer.cpp  TraceBuffer.cpp  TraceSharedContainer.cpp
